# act

./: Makefile  README.md  pyproject.toml
act/: bpm.py  midi_over_osc_client.py  mode.py  note.py  osc_midi_bridge_client.py  sched_midi.py  temporal_context.py  tidal_tracker.py
examples/: guitar.py  idm.py  melody.py  similarity.py
max/: midi-over-osc.maxpat  osc-midi-bridge.maxpat
supercollider/: osc-midi-bridge.scd
tests/: test_bpm.py  test_mode.py  test_note.py
