[tool.poetry]
name = "act"
version = "0.1.0"
description = ""
authors = ["inaba1115 <inaba1115@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-osc = "^1.8.3"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[tool.poetry.group.examples.dependencies]
termcolor = "^2.4.0"
numpy = "^1.26.2"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
